iamapinan-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: iamapinan
spec:
  selector:
    matchLabels:
      app: wordpress
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:4.7
          ports:
            - containerPort: 80
          # env:
          #   - name: WORDPRESS_DB_HOST
          #     value: wordpress-mysql
          #   - name: WORDPRESS_DB_PASSWORD
          #     value: example
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
