iamapinan-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: iamapinan
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: iamapinan.iotech.co.th
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                  name: wordpress-service
                  port:
                    number: 80
